hice cambios en hola.html y style.css

--- a/hola.html
+++ b/hola.html
@@ -10,13 +10,23 @@
     <link rel="preload" href="css/styles.css" as="style">
     <link href="css/styles.css" rel="stylesheet">
    </head>
+   <style>
+
+h1 {text-align: center;
+   
+   }
+.titulo {text-align: center;
+
+  }
+
+   </style>
    <body>
     
     <header>
         <h1>Bienvenido a mi sitio <span>Diseñador</span></h1>
     </header>
 
-    <nav class= "navegacion-principal contenedora" >
+    <nav class= "navegacion-principal" >
         <a href="#">Inicio</a>
         <a href="#">Sobre mi</a>
         <a href="#">Clientes</a>
