cambiamos info de los links

--- a/hola.html
+++ b/hola.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=p, initial-scale=1.0">
     <title>Diseñador freelancer</title>
-    <link rel="preload" href="css/normalize.css" as="style">
+    <link rel="preload" href="zoom/normalize.css" as="style">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preload" href="css/styles.css" as="style">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="preload" href="zoom/style.css" as="style">
+    <link href="zoom/styles.css" rel="stylesheet">
    </head>
    
    <style>
