aplicamos unos comentarios en el box model

--- a/hola.html
+++ b/hola.html
@@ -13,15 +13,21 @@
    
    <style>
    
+    /* Globales */
    html {
     font-size: 62.5%;
-    box-sizing: border-box;
+    box-sizing: border-box;  /* Hack para box model **/
   }
    *, *:before, *:after {
    box-sizing: inherit;
   }
   
-   body {
+
+  /* Tipografia */
+   
+  
+  
+  body {
    font-size: 16px;  /*1rem = 10px */
    font-family: "krub" , sans-serif;
  }
@@ -45,6 +51,9 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
  }
 
+ 
+  /* Titulos */
+ 
   .titulo, .navbg {
      text-align: center;
      font-size: 4rem;
