Agregue Contenedor al main

--- a/hola.html
+++ b/hola.html
@@ -54,7 +54,7 @@
     </section>
     </div>
     
-    <main>
+    <main class="contenedor">
       <h2 class="titulo2">Mis servicios</h2>
       
       <section>
