alineamos los CSS y agregamos sombra

--- a/hola.html
+++ b/hola.html
@@ -54,9 +54,10 @@
     </section>
     </div>
     
-    <main class="contenedor">
+    <main class="contenedor sombra">
       <h2 class="titulo2">Mis servicios</h2>
       
+      <div class="servicios">
       <section>
       <h3>Diseños web</h3>
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brush" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -124,9 +125,10 @@
       , molestiae dolorum porro consectetur qui labore
       delectus inventore cum facilis incidunt esse.</p>  
     </section>
-    </main>
+  </div> <!-- servicios-->  
+  </main>
 
-<section> 
+<section class=contacto> 
     <h2>Contacto</h2>
     <form>
          <fieldset>
