alineandocontacto y dando CSS

--- a/hola.html
+++ b/hola.html
@@ -128,9 +128,9 @@
     </section>
   </div> <!-- servicios-->  
   </main>
-
+  <h2 class="tituloh2">Contacto</h2>
 <section class=contacto> 
-    <h2>Contacto</h2>
+    
     <form>
          <fieldset>
                 <legend>Contactanos llenando estos campos!</legend>
