--- a/hola.html
+++ b/hola.html
@@ -33,6 +33,17 @@
       </nav>
    </div> 
       -->
+
+      <div class="dropdown">
+        <button class="mainmenubtn">Main Menu</button>
+        <div class="dropdown-child">
+          <a href="http://wwww.tudominio.com/page1.html">Inicio</a>
+          <a href="http://wwww.tudominio.com/page2.html">Sobre mi</a>
+          <a href="http://wwww.tudominio.com/page3.html">Clientes</a>
+          <a href="http://wwww.tudominio.com/page4.html">Contacto</a>
+        </div>
+      </div>
+
     <section class="hero">
       
       <div class="contenidohero">
@@ -161,8 +172,9 @@
         <textarea name="Mensaje" id="hola" cols="30" rows="10"></textarea>
     </div>
   </div> <!-- .contenedor-campos-->
-    <div> 
-    <input class="boton" type="submit" value="Enviar">
+    
+  <div class="enviar"> 
+    <input class="boton .w-100" type="submit" value="Enviar">
     </div>
 
         </fieldset>
