arregle el boton de enviar en otros dispositivos mas pequeños

--- a/hola.html
+++ b/hola.html
@@ -165,7 +165,7 @@
     
     <div class="campo mensajecampo">
         <label>Mensaje</label>
-        <textarea name="Mensaje" id="hola" cols="30" rows="10"></textarea>
+        <textarea name="Mensaje" placeholder="TU MENSAJE" id="hola" cols="30" rows="10"></textarea>
     </div>
   </div> <!-- .contenedor-campos-->
     
